--- a/docs/ReleaseNotes/0.9.99.0.md
+++ b/docs/ReleaseNotes/0.9.99.0.md
@@ -87,7 +87,7 @@ Comment, click, like, share, up-vote, subscribe
 [parts]: https://zer0kerbal.github.io/ExplorationExpansion/PartsCatalog "Parts Catalog"
 
 <!-- shields -->
-[MOD:shd]: https://img.shields.io/badge/Historic%20Archive%20(LHA)%20-v0.9.99.0--adoption-BADA55.svg?style=plastic&labelColor=darkgreen/ "0.9.99.0-adoption"
+[MOD:shd]: https://img.shields.io/badge/Exploration%20Expansion%20(LEE)%20-v0.9.99.0--adoption-BADA55.svg?style=plastic&labelColor=darkgreen/ "0.9.99.0-adoption"
 [PAGES:shd]: https://img.shields.io/badge/GitHub-Pages-white?style=plastic&labelColor=9cf&logoColor=181717&logo=github/ "GitHub IO"
 
 [GITHUB:url]: https://github.com/zer0Kerbal/ExplorationExpansion/ "GitHub"
